# gfgb

./: .clang-format  .gitignore  .gitmodules  .nvim.lua  Makefile  README.md  meson.build  meson.options  ninja.py  pyproject.toml
.github/workflows/: main.yml
assets/: doggo.aseprite
doc/: render.md
progs/debug_log/: debug_log.asm
progs/gbdev_asm_hello_world/: hello-world.asm
progs/push_load_stack/: push_load_stack.asm
progs/serial_port_output/: serial_port_output.asm
progs/simple_sprite/: build.sh  simple_sprite.asm  simple_sprite.sym
progs/tetris_disasm/: .gitignore  bank_000.asm  bank_001.asm  game.asm
py/: gfgb.pxd  gfgb.pyx
scripts/: run_tests_ubuntu25_04.sh  run_tests_ubuntu26_04.sh
src/: apu.cpp  apu.h  common.c  common.cpp  common.h  cpu.c  cpu.cpp  cpu.h  disassemble.c  disassemble.cpp  disassemble.h  gui.cpp  gui.h  icons.h  incbin.h  main.c  main.cpp  mbc.cpp  mbc.h  ppu.c  ppu.cpp  ppu.h  test_asserts.h  timing.cpp  timing.h
stubs/: gfgb.pyi
subprojects/: imgui-docking.wrap  sdl3.wrap
subprojects/sdl/: meson.build
subprojects/sdl/src/audio/: meson.build
subprojects/sdl/src/core/unix/: meson.build
subprojects/sdl/src/gpu/: meson.build
subprojects/sdl/src/tray/unix/: meson.build
subprojects/sdl/src/video/: meson.build
subprojects/sdl/wayland-protocols/: meson.build
test/: build_headers.sh  setup.py  sst_json_tests.py
test/blargg/: .gitignore
test/blargg/cpu_instrs/source/: 02-interrupts.gb
test/blargg/dmg_sound/rom_singles/: 01-registers.gb  02-len ctr.gb  03-trigger.gb  04-sweep.gb  05-sweep details.gb  06-overflow on trigger.gb  07-len sweep period sync.gb  08-len ctr during power.gb  09-wave read while on.gb  10-wave trigger while on.gb  11-regs after power.gb  12-wave write while on.gb
test/blargg/dmg_sound/source/: 01-registers.s
test/blargg_repro/: .gitignore
test/gf/: README.md  meson.build  project.mk
test/gf/apu_ch1/: meson.build
test/gf/apu_ch1/src/: intro.asm
test/gf/apu_ch1_timer/: README.md  meson.build
test/gf/layer_priority/: meson.build
test/gf/layer_priority/src/: intro.asm
test/gf/src/: apu_ch1_env_sweep.asm  apu_ch1_period_sweep.asm  apu_ch1_timer.asm  apu_ch3.asm  apu_ch3_stop_dac.asm  apu_panning.asm
test/gf/src/lib/: header.asm
test/headers/: common.py  cpu.py  disassemble.py  ppu.py
test/mooneye/: Makefile
test/mooneye/acceptance/ppu/: intr_2_0_timing.s  intr_2_mode0_timing.s  intr_2_mode0_timing_sprites.s  intr_2_mode3_timing.s  intr_2_oam_ok_timing.s  vblank_stat_intr-GS.gb  vblank_stat_intr-GS.s
test/mooneye/common/: .gitignore
test/sst/: .gitignore  conftest.py  pyproject.toml  setup.py  sst_test.py
test/sst/src/: gfgb.pxd  sst_json_tests.py  sst_json_tests.pyx
test/unit/: cpu_test.cpp  disassemble_test.cpp  mbc_test.cpp  ppu_test.cpp  test_common.h
