option('tracy_enable', type: 'boolean', value: false, description: 'Enable profiling')
option('enable_logging', type: 'boolean', value: false, description: 'Enable logging')
option('dbg_green_bg', type: 'boolean', value: false, description: 'Draw a green bg before drawing any layers to make white tiles distinct from bg')
